Fix alignment issues

--- a/imports/plugins/included/default-theme/client/styles/cart/checkout.less
+++ b/imports/plugins/included/default-theme/client/styles/cart/checkout.less
@@ -182,7 +182,9 @@
 }
 
 .order-details-content-title {
+  font-size: 16px;
   font-weight: bold;
+  line-height: 1.75;
   margin-bottom: 15px;
   margin-top: 25px;
 }
